Tidied up legal moves + removed GameVisible